[project]
name = "resilient_efleets"
version = "0.0.1"
dynamic = [
    "dependencies",
]
description = "Resilience analysis of electric fleets"
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "resilient_efleets",
]
license = {text = "MIT License"}
authors = [
  {name = "Srijith Balakrishnan", email = "s.balakrishnan@tudelft.nl"},
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.entry-points."console_scripts"]
resilient_efleets = "resilient_efleets.cli:main"

[project.optional-dependencies]
all = [
    "resilient_efleets[extra]",
]

extra = [
    "pandas",
]


[tool]
[tool.setuptools.packages.find]
include = ["resilient_efleets*"]
exclude = ["docs*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[tool.distutils.bdist_wheel]
universal = true


[tool.bumpversion]
current_version = "0.0.1"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "resilient_efleets/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'


[tool.flake8]
exclude = [
    "docs",
]
max-line-length = 88


[project.urls]
Homepage = "https://github.com/srijithbalakrishnan/resilient_efleets"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"